[project]
name = "python_hackrf"
version = "1.5.0"
authors = [
  {name="Leonid Gvozdev", email="leo.gvozdev.dev@gmail.com"},
]
description = "This is a wrapper for hackrf. It includes both libhackrf and hackrf-tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Android",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/GvozdevLeonid/python_hackrf"
"Bug Tracker" = "https://github.com/GvozdevLeonid/python_hackrf/issues"

[build-system]
requires = [
    "Cython>=3.1.0,<3.2.1",
    "setuptools",
    "wheel",
    "numpy",
    "tomli ; python_version < '3.11'",
]

[project.scripts]
python_hackrf= "python_hackrf.__main__:main"
